--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ShapeOfLightX"
+name = "shape_of_light_x"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 rs_ws281x = "0.4.2"
 ctrlc = "3.2.1"
+itertools = "0.10.1"
