--- a/RpiUdpListener/Cargo.toml
+++ b/RpiUdpListener/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
+default = ["rs_ws281x"]
 rs_ws281x = ["dep:rs_ws281x"]
 
 [dependencies]
