--- a/RpiUdpListener/Cargo.toml
+++ b/RpiUdpListener/Cargo.toml
@@ -15,3 +15,5 @@ ctrlc = "3.2.1"
 itertools = "0.10.1"
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+spin_sleep = "1.3.0"
