--- a/RpiUdpListener/Cargo.toml
+++ b/RpiUdpListener/Cargo.toml
@@ -17,3 +17,4 @@ tokio = { version = "1", features = ["full"] }
 warp = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 spin_sleep = "1.3.0"
+bytemuck = "1.21.0"
