--- a/RpiUdpListener/Cargo.toml
+++ b/RpiUdpListener/Cargo.toml
@@ -18,3 +18,5 @@ warp = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 spin_sleep = "1.3.0"
 bytemuck = "1.21.0"
+env_logger = "0.11.6"
+log = "0.4.22"
