--- a/RpiUdpListener/Cargo.toml
+++ b/RpiUdpListener/Cargo.toml
@@ -14,9 +14,10 @@ rs_ws281x = { version = "0.4.2", optional = true }
 ctrlc = "3.2.1"
 itertools = "0.10.1"
 tokio = { version = "1", features = ["full"] }
-warp = "0.3"
+warp = { version = "0.3", features = ["compression"] }
 serde = { version = "1.0", features = ["derive"] }
 spin_sleep = "1.3.0"
 bytemuck = "1.21.0"
 env_logger = "0.11.6"
 log = "0.4.22"
+flate2 = "1.0"
