--- a/TreeControllerWeb/package.json
+++ b/TreeControllerWeb/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "fflate": "^0.8.2",
     "globals": "^15.14.0",
     "prettier": "3.4.2",
     "typescript": "~5.6.2",
